choice spacing fix
Card images within playerChoices should fit better when accompanied with text. This should avoid playerChoice going off the edge of the screen.

--- a/main.css
+++ b/main.css
@@ -340,7 +340,7 @@ main {
     flex-flow: row wrap;
 }
 #attackTokens {
-    left: 3%;    
+    left: 3%;
 }
 #influenceTokens {
     left: 50%;
@@ -398,7 +398,7 @@ main {
     overflow: auto;
 }
 .choice img {
-    max-height: calc(100vh - var(--playerChoiceLabelSize) - 2rem);
+    max-height: calc(100vh - var(--playerChoiceLabelSize) - 5rem);
     max-width: 100%;
 }
 .choiceContainer {
